GH-79 code clean up